@@ -2,7 +2,7 @@
 #define RUBY_RELEASE_DATE "2008-07-10"
 #define RUBY_VERSION_CODE 187
 #define RUBY_RELEASE_CODE 20080710
-#define RUBY_PATCHLEVEL 51
+#define RUBY_PATCHLEVEL 52
 
 #define RUBY_VERSION_MAJOR 1
 #define RUBY_VERSION_MINOR 8
